Update 2D Ising Model Kawasaki.ipynb

--- a/2D Ising Model Kawasaki.ipynb
+++ b/2D Ising Model Kawasaki.ipynb
@@ -456,7 +456,7 @@
     "    E_calc = np.array(E_calc)\n",
     "    \n",
     "    E_avg= E_calc.mean()\n",
-    "    C= E_calc.std()/T**2\n",
+    "    C= E_calc.var()/T**2\n",
     "    return [E_avg , C]\n"
    ]
   },
